Gig completed